Fixed responsive on mobile

--- a/src/styles/Global/app.scss
+++ b/src/styles/Global/app.scss
@@ -18,8 +18,8 @@ $primaryBackGroundColor: #1b1b1b;
 
 
 section {
-  min-height: 70svh;
-  min-height: 70vh;
+  min-height: 100svh;
+  min-height: 100vh;
   background: $primaryBackGroundColor;
   color: white;
 }
